fix overview segments text truncation & segment cut off

--- a/src/components/app/app.css
+++ b/src/components/app/app.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css?family=Nanum+Gothic&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Oxygen&display=swap');
 
 :root {
-  --fontFamily: 'Nanum Gothic', sans-serif !important;
+  --fontFamily: 'Oxygen', sans-serif;
   --primaryColor: #f137a5;
   --primaryColor_dark: #ba0076;
   --primaryColor_light: #ff72d6;
@@ -64,6 +64,7 @@
   width: 100%;
   height: 100%;
   background: var(--bgColor);
+  font-family: var(--fontFamily);
 }
 
 :global(#root) {
